--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -79,7 +79,7 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="{{path('tab.app', {nb : 7})}}" data-toggle="collapse" data-target="#collapseUtilities"
+                <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Nombre notes</span>
@@ -87,9 +87,9 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
+                        <h6 class="collapse-header">Nombre note</h6>
+                        <a class="collapse-item" href="{{path('tab.app', {nb : 7})}}">7 Notes</a>
+                        <a class="collapse-item" href="{{path('personne.index', )}}">Personne</a>
                         <a class="collapse-item" href="utilities-animation.html">Animations</a>
                         <a class="collapse-item" href="utilities-other.html">Other</a>
                     </div>
